[gd_scene load_steps=2 format=3 uid="uid://devm234jx4xwx"]

[ext_resource type="Script" path="res://src/core/client/scene/menu/modular/main_menu.gd" id="1_3vjp6"]

[node name="MainMenu" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
script = ExtResource("1_3vjp6")

[node name="MainMenuContainer" type="VBoxContainer" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false

[node name="PlayButton" type="Button" parent="MainMenuContainer"]
layout_mode = 2
mouse_filter = 1
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenuContainer"]
layout_mode = 2
mouse_filter = 1
text = "Options"

[node name="QuitButton" type="Button" parent="MainMenuContainer"]
layout_mode = 2
mouse_filter = 1
text = "Quit Game"

[connection signal="pressed" from="MainMenuContainer/PlayButton" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MainMenuContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
